--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <a href="emociones.html">🧠 Emociones</a>
   <a href="estudios.html">💻 Estudios</a></div>
 
-  <div class="animated-bg"></div>
+  <div class="container"></div>
   <script src="frases.js"></script>
   <script src="main.js"></script>
 </body>
